unpackaged/main/default/objects/Billing_Rule_Class__c/Billing_Rule_Class__c.object-meta.xml
<CustomObject>
    <label>Billing Rule Class</label>
    <nameField>
        <label>Billing Rule Classes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rules Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>