unpackaged/main/default/objects/Billing_Rule_Class__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>The name of the apex Class to be invoked which contains the rule logic.</description>
    <inlineHelpText>The name of the apex Class to be invoked which contains the rule logic.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>