unpackaged/main/default/objects/Billing_Rule_Class__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the rule and its purpose</description>
    <inlineHelpText>Description of the rule and its purpose</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>