unpackaged/main/default/objects/Billing_Rule_Class__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>The Type of rule that this class implements (Date Strategy, Calculation etc)</description>
    <inlineHelpText>The Type of rule that this class implements (Date Strategy, Calculation etc)</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Date Strategy</fullName>
            </value>
            <value>
                <fullName>Digital Calculation Rule</fullName>
            </value>
            <value>
                <fullName>Print Date Strategy</fullName>
            </value>
            <value>
                <fullName>Print Item factory</fullName>
            </value>
            <value>
                <fullName>Digital Fulfilment Factory</fullName>
                <isActive>false</isActive>
                <label>Digital Fulfilment Factory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>