unpackaged/main/default/objects/Billing_Rule_Class__c/recordTypes/Digital_Rule.recordType-meta.xml
<RecordType>
    <fullName>Digital_Rule</fullName>
    <active>true</active>
    <label>Digital  Rule</label>
</RecordType>