unpackaged/main/default/objects/Billing_Rule_Class__c/recordTypes/Print_Rule.recordType-meta.xml
<RecordType>
    <fullName>Print_Rule</fullName>
    <active>true</active>
    <label>Print Rule</label>
</RecordType>